@@ -27,6 +27,8 @@ Noteworthy changes in version 2.0.0 (unreleased)
  Context::generateRandomValue                NEW.
  Context::EncryptionFlags::AddRecipient      NEW.
  Context::EncryptionFlags::ChangeRecipient   NEW.
+ Error::isError                              NEW.
+ Error::isSuccess                            NEW.
  RandomBytesResult                           NEW.
  RandomValueResult                           NEW.
  Context::startTrustItemListing              REMOVED.
